--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "color": "3.0.0",
     "expo": "^28.0.0",
+    "moment": "2.22.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
-    "color": "3.0.0",
-    "moment": "2.22.2",
+    "react-native-dropdownalert": "^3.4.0",
     "react-native-elements": "0.18.5",
-    "react-native-extended-stylesheet": "0.8.1"
+    "react-native-extended-stylesheet": "0.8.1",
+    "react-navigation": "^2.6.2"
   }
 }
