--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "color": "3.0.0",
+    "dot-prop-immutable": "^1.4.0",
     "expo": "^28.0.0",
     "moment": "2.22.2",
     "react": "16.3.1",
@@ -14,6 +15,8 @@
     "react-native-dropdownalert": "^3.4.0",
     "react-native-elements": "0.18.5",
     "react-native-extended-stylesheet": "0.8.1",
-    "react-navigation": "^2.6.2"
+    "react-navigation": "^2.6.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
