--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "color": "3.0.0",
     "dot-prop-immutable": "^1.4.0",
+    "dot-prop-immutable-chain": "0.0.3",
     "expo": "^28.0.0",
     "moment": "2.22.2",
     "react": "16.3.1",
@@ -17,6 +18,7 @@
     "react-native-extended-stylesheet": "0.8.1",
     "react-navigation": "^2.6.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   }
 }
